# weather

./: main.py  pyproject.toml  render.yaml  requirements.txt  weather.db  weather.py
static/: index.html  script.js  styles.css
